Cherry-pick r281662. rdar://problem/82651998

REGRESSION(r275754): Using MarkOnlyThis to make the preferred width dirty introduces unexpected state
    https://bugs.webkit.org/show_bug.cgi?id=229586
    <rdar://82141454>

    LayoutTests/imported/w3c:

    Unreviewed revert of r275754.

    * web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-002-expected.txt:
    * web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-vertical-lr-002-expected.txt:
    * web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-vertical-rl-002-expected.txt:

    Source/WebCore:

    Unreviewed revert.

    * rendering/RenderBlock.cpp:
    (WebCore::RenderBlock::recomputeLogicalWidth):
    (WebCore::shouldRecalculateMinMaxWidthsAffectedByAncestor): Deleted.

    Canonical link: https://commits.webkit.org/241015@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281662 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/240672.26@safari-612-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-612-branch@281895 268f45cc-cd09-0410-ab3c-d52691b4dbfc